# Backend/Datamodels/Requests.py
@@ -1,4 +1,6 @@
-from typing import List
+from typing import List, Dict
+
+from httpx import request
 from Datamodels.Message import Message
 from pydantic import BaseModel
 
@@ -22,4 +24,18 @@ class SimplifyRequest(BaseModel):
     request_id: str
     text: str
     target_reading_level: int
+
+class WebpageChatRequest(BaseModel):
+    request_id: str
+    messages: List[Message]
+    newQuestion: str
+    webpageContent: str
     
+    def get_formatted_history(self) -> List[dict]:
+        gemini_compaitible_messages = []
+        for m in self.messages:
+            gemini_compaitible_messages.append(
+                m.get_gemini_format()
+            )
+    
+        return gemini_compaitible_messages
